fix bug 1464, URL wrapping in IE

--- a/comp/media/css/style.css
+++ b/comp/media/css/style.css
@@ -298,7 +298,7 @@ div.debug dt:after {
     background: #999966;
     border-right: solid white 1px;
 }
-.desk .item dd { margin-left: 11em; }
+.desk .item dd { margin-left: 11em; word-wrap: break-word; }
 .desk .item .actions p { margin: 0; padding: 5px 0; line-height: 20px; }
 .desk .item .actions {
     top: 0px; right: 0px;
